--- a/index.html
+++ b/index.html
@@ -5,12 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Julie 301 Lab 1 SMACCS</title>
-  <link rel="stylesheet" href="css/reset.css" />
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="reset.css" type="text/css"/>
+  <link rel="stylesheet" href="style.css" type="text/css"/>
   <script src="main.js"></script>
 </head>
 
 <body>
+  <h1>a</h1>
+  <main>
+    <aside>b</aside>
+    <section>c</section>
+    <section>d</section>
+    <ul>
+      <li>e</li>
+      <li>f</li>
+      <li>g</li>
+      <li>h</li>
+    </ul>
+    <section>i</section>
+  </main>
+
+
   
 </body>
 </html>
