got mobile format

--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
       <li>g</li>
       <li>h</li>
     </ul>
-    <section>i</section>
+    <div></div>
+    <p>i</p>
   </main>
 
-
-  
 </body>
 </html>
