restructing to work desktop version

--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@
   <h1>a</h1>
   <main>
     <aside>b</aside>
-    <section>c</section>
-    <section>d</section>
-    <ul>
-      <li>e</li>
-      <li>f</li>
-      <li>g</li>
-      <li>h</li>
-    </ul>
-    <div></div>
-    <p>i</p>
+    <div id = "cdefghi">
+      <div id="cd">
+        <section>c</section>
+        <section>d</section>
+      </div>
+      <div class= "cleardiv"></div>
+      <ul>
+        <li>e</li>
+        <li>f</li>
+        <li>g</li>
+        <li>h</li>
+      </ul>
+      <div class= "cleardiv"></div>
+      <p>i</p>
+    </div>
   </main>
 
 </body>
