finished enough for submission Added color Need to change sizes

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <div id = "cdefghi">
       <div id="cd">
         <section>c</section>
-        <section>d</section>
+        <section id="d">d</section>
       </div>
       <div class= "cleardiv"></div>
       <ul>
         <li>e</li>
-        <li>f</li>
-        <li>g</li>
-        <li>h</li>
+        <li id= "f">f</li>
+        <li id= "g">g</li>
+        <li id= "h">h</li>
       </ul>
       <div class= "cleardiv"></div>
       <p>i</p>
