got my footer to work right

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <li id= "h">h</li>
       </ul>
       <div class= "cleardiv"></div>
-      <p>i</p>
     </div>
   </main>
+  <footer>i</footer>
 
 </body>
 </html>
