--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
 <body>
   <h1>a</h1>
-  <main>
-    <aside>b</aside>
+  <!-- <main> -->
+  <aside>b</aside>
+  <span>
     <div id = "cdefghi">
       <div id="cd">
         <section>c</section>
@@ -26,10 +27,9 @@
         <li id= "g">g</li>
         <li id= "h">h</li>
       </ul>
-      <div class= "cleardiv"></div>
     </div>
-  </main>
-  <footer>i</footer>
-
+    <!-- </main> -->
+    <footer>i</footer>
+  </span>
 </body>
 </html>
